feat: fixed problems with IT and API create book